fix: CapacityChangeSchedulerEngine